rounded corners, team option button and more

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,6 +1,6 @@
-<mat-toolbar style="background-color: #b2beb5">
+<mat-toolbar style="background-color: #b2beb5; border-radius: 25px">
     Wolo Game Sheet
-    <span style="flex: 1 1 auto"></span>
+    <span class="flex"></span>
 
     <div class="buttons-container">
         <div *ngIf="session; else nosession">
