--- a/src/app/scoresheet/command/command.component.html
+++ b/src/app/scoresheet/command/command.component.html
@@ -1,4 +1,7 @@
-<mat-card class="flex-center" style="background-color: #e8ecf1">
+<mat-card
+    class="flex-center"
+    style="background-color: #f8faff; border-radius: 25px"
+>
     <div style="font-size: 40px" *ngIf="$gameScore | async as gameScore">
         {{ gameScore }}
     </div>
