--- a/src/app/scoresheet/help/help.component.html
+++ b/src/app/scoresheet/help/help.component.html
@@ -11,8 +11,8 @@
     </p>
     <p>
         <a class="bold">Next Quarter:</a><br />
-        Input is: x (it can be repeated)<br />
-        Examples: x, Xx, XXXXXX
+        Input is: quarter, x (it can be repeated)<br />
+        Examples: quarter, x, Xx, XXXXXX
     </p>
     <p>
         <a class="bold">Timeouts:</a><br />
