--- a/src/styles.css
+++ b/src/styles.css
@@ -8,7 +8,7 @@ body {
     height: 100%;
     margin: 0;
     font-family: Roboto, "Helvetica Neue", sans-serif;
-    background-color: #e8ecf1;
+    background-color: #f2efe5;
 }
 
 .ag-header-cell,
@@ -42,4 +42,8 @@ body {
 
 .bold {
     font-weight: bold;
+}
+
+.flex {
+    flex: 1 1 auto;
 }
