--- a/src/app/scoresheet/scoresheet.component.css
+++ b/src/app/scoresheet/scoresheet.component.css
@@ -5,7 +5,7 @@
 
     grid-template-areas:
         "info command events"
-        "teams teams events";
+        "home away events";
 }
 
 @media screen and (max-width: 1300px) {
@@ -15,19 +15,20 @@
         grid-template-areas:
             "info events"
             "command events"
-            "teams teams";
+            "home away";
     }
 }
 
 @media screen and (max-width: 700px) {
     .layout-container {
         grid-template-columns: 1fr;
-        grid-template-rows: 175px 175px 175px 775px;
+        grid-template-rows: 175px 175px 175px 775px 775px;
         grid-template-areas:
             "info"
             "command"
             "events"
-            "teams";
+            "home"
+            "away";
     }
 }
 
@@ -39,8 +40,12 @@
     grid-area: command;
 }
 
-.teams {
-    grid-area: teams;
+.home {
+    grid-area: home;
+}
+
+.away {
+    grid-area: away;
 }
 
 .info {
