header, new help page, snack bar errors

--- a/src/app/scoresheet/game-select/game-select.component.html
+++ b/src/app/scoresheet/game-select/game-select.component.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title>Wolo Gamesheet Game Selector</h2>
+<h2 mat-dialog-title>Wolo Scoresheet Game Selector</h2>
 <mat-dialog-content>
     <mat-card
         style="background-color: #e8ecf1"
