--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,5 +1,8 @@
 <mat-toolbar style="background-color: #b2beb5; border-radius: 25px">
-    Wolo Game Sheet
+    <div>
+        Wolo Scoresheet
+        <a style="font-size: 10px"> v1.1.3</a>
+    </div>
     <span class="flex"></span>
 
     <div class="buttons-container">
