--- a/src/app/scoresheet/team-select/team-select.component.html
+++ b/src/app/scoresheet/team-select/team-select.component.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title>Wolo Gamesheet Team Selector</h2>
+<h2 mat-dialog-title>Wolo Scoresheet Team Selector</h2>
 <mat-dialog-content>
     <mat-card
         style="background-color: #e8ecf1"
